--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "homepage": "https://github.com/moncici007/binance#readme",
   "dependencies": {
     "@moncici/date-time-processor": "^1.0.3",
+    "@moncici/log": "^1.0.1",
     "@moncici/proxy": "^1.0.1",
     "@moncici/sleep": "^1.0.0",
     "feishu-notifier": "^1.0.2"
