--- a/package.json
+++ b/package.json
@@ -1,32 +1,32 @@
 {
-  "name": "@moncici/binance",
-  "version": "1.0.2",
+  "name": "bioracle",
+  "version": "1.1",
   "description": "",
   "type": "module",
-  "main": "coin_scan_binance.js",
+  "main": "bioracle.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/moncici007/binance"
+    "url": "https://github.com/wormcy/bioracle"
   },
-  "website": "https://github.com/moncici007/binance.git",
+  "website": "https://github.com/wormcy/bioracle.git",
   "keywords": [
-    "binance",
-    "client",
-    "arbitrim"
+    "cex",
+    "oracle",
+    "bioracle"
   ],
-  "author": "moncici007",
-  "license": "ISC",
+  "author": "wormcy",
+  "license": "MIT",
   "bugs": {
-    "url": "https://github.com/moncici007/binance/issues"
+    "url": "https://github.com/wormcy/bioracle/issues"
   },
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org"
   },
-  "homepage": "https://github.com/moncici007/binance#readme",
+  "homepage": "https://github.com/wormcy/bioracle#readme",
   "dependencies": {
     "@moncici/date-time-processor": "^1.0.3",
     "@moncici/log": "^1.0.2",
